--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,12 @@
-{{page-title "SurveyNetlify"}}
+{{page-title "Survey Netlify"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<header>
+    <h1>Community Survey</h1>
+</header>
+<main>
 
 {{outlet}}
+</main>
+<footer>
+    <p>Footer Copy</p>
+</footer>
