added netlify attribute to form

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 {{page-title "Index"}}
 
 
-<form name="contact" method="POST" data-netlify="true">
+<form name="contact" method="POST" data-netlify="true" netlify>
   <p>
     <label>Your Name: <input type="text" name="name" /></label>   
   </p>
