--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,25 +1,41 @@
-{{page-title "Index"}}
+{{page-title '2022 Survey'}}
 
+<form
+  class='space-y-8 divide-y divide-gray-200'
+  name='survey-22'
+  method='POST'
+  data-netlify='true'
+  netlify
+>
+  <div>
+    <label
+      for='email'
+      class='block text-sm font-medium text-gray-700'
+    >Email</label>
+    <div class='mt-1'>
+      <input
+        type='email'
+        name='email'
+        id='email'
+        class='shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md'
+        placeholder='you@example.com'
+        aria-describedby='email-description'
+      />
+    </div>
+    <p class='mt-2 text-sm text-gray-500' id='email-description'>We'll only use
+      this to follow up on the survey results.</p>
+  </div>
 
-<form name="contact" method="POST" data-netlify="true" netlify>
-  <p>
-    <label>Your Name: <input type="text" name="name" /></label>   
-  </p>
-  <p>
-    <label>Your Email: <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
-  </p>
-  <p>
-    <label>Message: <textarea name="message"></textarea></label>
-  </p>
-  <p>
-    <button type="submit">Send</button>
-  </p>
+  <div class='pt-5'>
+    <div class='flex justify-end'>
+      <button
+        type='reset'
+        class='bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500'
+      >Clear Form</button>
+      <button
+        type='submit'
+        class='ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500'
+      >Submit Survey</button>
+    </div>
+  </div>
 </form>
-
-{{outlet}}
