--- a/app/components/sn-footer.hbs
+++ b/app/components/sn-footer.hbs
@@ -3,27 +3,10 @@
   <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
     <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
       <div class="px-5 py-2">
-        <a href="mailto:melsumner@fastmail.com" class="text-base text-gray-500 hover:text-gray-900">Email Us</a>
+        <a href="mailto:melsumner@fastmail.com" class="text-base text-gray-500 hover:text-gray-900">Sponsor One</a>
       </div>
-
       <div class="px-5 py-2">
-        <a href="https://blog.emberjs.com" class="text-base text-gray-500 hover:text-gray-900"> The Official Blog </a>
-      </div>
-
-      <div class="px-5 py-2">
-        {{!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900"> Jobs </a> --}}
-      </div>
-
-      <div class="px-5 py-2">
-        {{!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900"> Press </a> --}}
-      </div>
-
-      <div class="px-5 py-2">
-        {{!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900"> Accessibility </a> --}}
-      </div>
-
-      <div class="px-5 py-2">
-        {{!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900"> Partners </a> --}}
+        <a href="https://blog.emberjs.com" class="text-base text-gray-500 hover:text-gray-900">Sponsor Two</a>
       </div>
     </nav>
     <div class="mt-8 flex justify-center space-x-6">
@@ -42,6 +25,6 @@
         </svg>
       </a>
     </div>
-    <p class="mt-8 text-center text-base text-gray-400">&copy; 2022 Tilde, Inc. All rights reserved.</p>
+    <p class="mt-8 text-center text-base text-gray-400"><a href="mailto:melsumner@fastmail.com" class="text-base text-gray-500 hover:text-gray-900">Questions? Email Us</a></p>
   </div>
 </footer>
