re-wound and re-added prember

--- a/app/components/sn-header.hbs
+++ b/app/components/sn-header.hbs
@@ -16,6 +16,7 @@
             />
           </div>
           <div class="hidden lg:block lg:ml-10">
+            {{!-- template-lint-disable no-html-comments --}}
             <div class="flex space-x-4">
               <!-- Current: "bg-indigo-700 text-white", Default: "text-white hover:bg-indigo-500 hover:bg-opacity-75" -->
               {{!-- <a
@@ -35,7 +36,7 @@
   </nav>
   <header class="py-10">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h1 class="text-3xl font-bold text-white">2022 Survey</h1>
+      <h1 class="text-3xl font-bold text-white">Community Survey</h1>
     </div>
   </header>
 </div>
