--- a/app/templates/success.hbs
+++ b/app/templates/success.hbs
@@ -1,3 +1,3 @@
 {{page-title "Success"}}
 
-<img src="assets/images/thank-you.png" alt="" role="presentation" />
+<img src="./assets/images/thank-you.png" alt="" role="presentation" />
