--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
 <form
   class='space-y-8'
   name='survey-22'
-  action="/success"
+  action="/success/index.html"
   method='POST'
   data-netlify='true'
 >
