--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,14 +10,14 @@
   <div>
     <label
       for='email'
-      class='block text-sm font-medium text-gray-700'
+      class='block text-sm font-medium text-gray-800'
     >Email</label>
     <div class='mt-1'>
       <input
         type='email'
         name='email'
         id='email'
-        class='shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md'
+        class='shadow-sm focus:ring-orange-500 focus:border-orange-500 block w-full sm:text-sm border-gray-500 rounded-md'
         placeholder='you@example.com'
         aria-describedby='email-description'
       />
@@ -29,12 +29,12 @@
   <div>
     <label
       for='location'
-      class='block text-sm font-medium text-gray-700'
+      class='block text-sm font-medium text-gray-800'
     >How long have you been using the framework?</label>
     <select
       id='location'
       name='location'
-      class='mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md'
+      class='mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-500 focus:outline-none focus:ring-orange-500 focus:border-orange-500 sm:text-sm rounded-md'
     >
       <option>Less than a year</option>
       <option>1-3 years</option>
@@ -47,11 +47,11 @@
     <div class='flex justify-end'>
       <button
         type='reset'
-        class='bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500'
+        class='bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-800 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500'
       >Clear Form</button>
       <button
         type='submit'
-        class='ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500'
+        class='ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-orange-600 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500'
       >Submit Survey</button>
     </div>
   </div>
