adding in the secret hidden input bc fastboot

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,6 +7,7 @@
   method='POST'
   data-netlify='true'
 >
+<input type='hidden' name='form-name' value='survey-22' aria-label="leave this one alone it is just for netlify" />
   <div>
     <label
       for='email'
